--- a/static/challenge.css
+++ b/static/challenge.css
@@ -3,11 +3,13 @@ body {
 }
 
 h2 {
-    margin: 3rem 0 1rem;
+    margin: 1rem 0 1rem;
 }
 
 ul {
-    list-style-type: upper-roman;
+    list-style-type: none;
+    padding-inline-start: 0px;
+
 }
 
 li {
@@ -21,3 +23,46 @@ li {
 .red {
     color: red;
 }
+
+body{background-color: rosybrown; margin: 0; }
+
+
+button{background-color: rosybrown; border: dashed 2px black; padding: 10px; width: 100%;}
+
+.livro {border-bottom-style: double; margin-left: 0px;  
+}
+.capitulo:hover{font-weight: bold;}
+.capitulo{
+    margin-left: 0px;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    border-left: solid 1px black ;
+
+}
+.content-container{
+    display: flex;
+    justify-content: center;
+}
+.capitulo:last-of-type{border-right: solid 1px black ;}
+
+.table{
+    margin-top: 40px
+}
+
+#indicePaginas{display: flex;}
+
+#loader {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rosybrown;
+}
+.loaderContainer {display: flex; flex-direction: column;}
+.content {padding: 30px; display: none; max-width: 550px }
+#coiso {display: flex}
+.campo {flex: 1}
+.campo input {width: 100%; border: black solid 1px}
